--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Filip's blog
 author:
   name: fiskrt
-  email: filipsk@ethz.ch
+  email: i@filipskogh.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -9,8 +9,8 @@ description: >
   There are three types of understanding:
   <ol type="I">
   <li>Existence: we observe it</li>
-  <li>Simulation: we can create it</li>
-  <li>Laws: we can describe it with a small set of equations</li>
+  <li>Simulation: we create it</li>
+  <li>Laws: we describe it</li>
   </ol>
  
 #Let's get closer to the base-case.
@@ -42,7 +42,7 @@ minima:
   #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
   #   - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
   #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-  #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
+     - { platform: linkedin,       user_url: "https://www.linkedin.com/in/filipskogh" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
   #   - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
